projects overflow fix

--- a/home.css
+++ b/home.css
@@ -223,7 +223,7 @@ h4{
 	height: 80px;
 
 	padding: 15px;
-	margin: 30px;
+	margin: 15px;
 	border: 1px solid white;
 	background: rgba(76, 80, 175, 0.3);
 	text-decoration: none;
